# weather

./: .gitignore  .sample-env  README.md  app.js  gulpfile.js  index.html  package-lock.json  package.json
2016/scss/: style.scss
2017/: package.json
2017/routes/: api.js
current/client/: package.json
current/client/public/: index.html
current/client/src/: App.js  formatter.ts  iconMap.ts  index.tsx  types.ts
current/client/src/components/: App.tsx  Currently.tsx  Daily.tsx  Forecast.tsx  Overview.tsx  units.ts
current/client/src/components/hooks/: defaultWeather.ts  index.ts  useGeolocation.ts  (+2 more)
current/client/src/lib/: formatter.ts
current/rnw-client/: package.json
current/rnw-client/ios/weather.xcodeproj/: project.pbxproj
current/rnw-client/lib/: format.ts  weatherData.ts
current/rnw-client/src/: index.tsx  types.ts
current/rnw-client/src/components/: index.tsx
current/server/: .gitignore  mix.exs
current/server/config/: config.exs
current/server/lib/weather/: application.ex  coordinates.ex  weather_darksky.ex  weather_router.ex
current/server/weather-api/: Cargo.toml
current/server/weather-api/src/: location.rs  main.rs
old/: gulpfile.js  index.html  package.json
old-2017/: app.js  package.json
old-2017/public/javascripts/: scripts.js
old-2017/public/stylesheets/: style.css
old/js/: script.js
old/template/: index.html
public/javascripts/: scripts.js  skycons.js
public/stylesheets/: _overrides.scss  _variables.scss  style.css  style.css.map  style.scss
routes/: api.js  index.js
views/: index.hbs  layout.hbs
(+12 files in other folders)
